Automated merge with https://nhin-d.googlecode.com/hg/